feat: global font size button implemented

--- a/app/globals.css
+++ b/app/globals.css
@@ -10,6 +10,8 @@
     --color-fill-inverted: #0c1e36;
     --color-button-accent: #350edf;
     --color-button-accent-hover: #1a0e50;
+    --font-size-base: 12px;
+    --font-line-height-base: 20px;
   }
   .theme-contrast {
     --color-text-base: #eeeeee;
@@ -18,5 +20,13 @@
     --color-fill-inverted: #ffffff;
     --color-button-accent: #eeeeee;
     --color-button-accent-hover: #aaaaaa;
+  }
+  .theme-font-size-bigger {
+    --font-size-base: 14px;
+    --font-line-height-base: 25px;
+  }
+  .theme-font-size-biggest {
+    --font-size-base: 16px;
+    --font-line-height-base: 30px;
   }
 }
