--- a/app/globals.css
+++ b/app/globals.css
@@ -2,17 +2,27 @@
 @tailwind components;
 @tailwind utilities;
 
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 @layer base {
   :root {
+    /* colors */
     --color-bg-base: #f5f5f5;
     --color-text-base: #222221;
+    /* fonts */
+    --font-size-link-base: 13px;
+    --font-line-height-base: 19px;
+
     /* --color-text-base: #333333;
     --color-text-inverted: #dddddd;
     --color-fill: #afc0d8;
     --color-fill-inverted: #0c1e36;
     --color-button-accent: #350edf;
     --color-button-accent-hover: #1a0e50;
-    --font-size-base: 12px;
     --font-line-height-base: 20px; */
   }
   .theme-contrast {
@@ -32,5 +42,44 @@
   .theme-font-size-biggest {
     /* --font-size-base: 16px;
     --font-line-height-base: 30px; */
+  }
+}
+
+@layer components {
+  /* 
+  navigation 
+  */
+
+  /* link-default */
+  .link-default {
+    @apply font-light text-red-200 lowercase text-linkBase text-skin-base;
+  }
+  .link-default::after {
+    content: '';
+    background-color: var(--color-text-base);
+    display: block;
+    width: 100%;
+    height: 1px;
+    margin-top: 1px;
+    opacity: 0;
+    scale: 0;
+    transition: all ease-out 100ms;
+  }
+  .link-default:hover::after {
+    opacity: 1;
+    scale: 1;
+  }
+
+  /* link-active */
+  .link-active {
+    @apply font-normal text-red-500 lowercase cursor-default text-linkBase text-skin-base;
+  }
+  .link-active::after {
+    content: '';
+    background-color: var(--color-text-base);
+    display: block;
+    width: 100%;
+    height: 1px;
+    margin-top: 2px;
   }
 }
