--- a/app/globals.css
+++ b/app/globals.css
@@ -80,6 +80,10 @@
     display: block;
     width: 100%;
     height: 1px;
-    margin-top: 2px;
+    margin-top: 3px;
+  }
+
+  .desktop-container {
+    @apply w-[1140px] mx-auto;
   }
 }
