--- a/app/globals.css
+++ b/app/globals.css
@@ -17,6 +17,7 @@
     /* colors */
     --color-background-base: #f5f5f5;
     --color-foreground-base: #222221;
+    --color-shadow: rgba(18, 41, 36, 0.15);
     /* fonts */
     --font-size-13: 13px;
     --font-size-13-line-height: 18px;
@@ -34,10 +35,12 @@
   .theme-dark {
     --color-background-base: #222221;
     --color-foreground-base: #f5f5f5;
+    --color-shadow: rgba(245, 245, 245, 0.15);
   }
   .theme-contrast {
     --color-background-base: #222221;
     --color-foreground-base: #fffe54;
+    --color-shadow: rgba(255, 254, 84, 0.15);
   }
 
   /* font sizes */
@@ -54,7 +57,7 @@
 @layer components {
   /*   fonts   */
   .font-base-regular {
-    @apply font-normal text-skin-base;
+    @apply font-normal text-base-13 text-skin-base;
   }
   .font-base-bold {
     @apply font-bold text-skin-base;
@@ -67,7 +70,7 @@
   /*   navigation   */
   /* link-default */
   .link-default {
-    @apply font-light text-linkBase text-skin-base focus:primary-focus;
+    @apply font-light text-base-13 text-skin-base focus:primary-focus;
   }
   .link-default::after {
     content: '';
@@ -87,7 +90,7 @@
 
   /* link-active */
   .link-active {
-    @apply font-normal cursor-default text-linkBase text-skin-base;
+    @apply font-normal cursor-default text-base-13 text-skin-base;
   }
   .link-active::after {
     content: '';
@@ -143,5 +146,35 @@
 
   .sr-only {
     @apply absolute left-[-10000px] top-auto w-[1px] h-[1px] overflow-hidden;
+  }
+
+  .overlay {
+    background-color: var(--color-background-base);
+    opacity: 0.8;
+  }
+
+  .overlay-minimal {
+    background-color: var(--color-background-base);
+    opacity: 0.2;
+  }
+
+  /* transitions */
+  .transition-accessibility-menu {
+    transition-property: all;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 300ms;
+  }
+
+  /* separators */
+  .separator-vertical {
+    @apply w-[1px] h-4 my-1 mx-4 bg-slate-800;
+    color: var(--color-foreground-base);
+  }
+  .separator-vertical::after {
+    content: '';
+    background-color: var(--color-foreground-base);
+    display: block;
+    width: 1px;
+    height: 100%;
   }
 }
