--- a/app/globals.css
+++ b/app/globals.css
@@ -17,10 +17,13 @@
     /* colors */
     --color-background-base: #f5f5f5;
     --color-foreground-base: #222221;
+    --color-gray: #9e9e9e;
     --color-shadow: rgba(18, 41, 36, 0.15);
     /* fonts */
     --font-size-13: 13px;
     --font-size-13-line-height: 18px;
+    --font-size-22: 20px;
+    --font-size-22-line-height: 28px;
 
     /* --color-foreground-base: #333333;
     --color-text-inverted: #dddddd;
@@ -72,7 +75,11 @@
   .link-default {
     @apply font-light text-base-13 text-skin-base focus:primary-focus;
   }
-  .link-default::after {
+  .link-mobile-default {
+    @apply font-semibold text-base-22 text-skin-base focus:primary-focus;
+  }
+  .link-default::after,
+  .link-mobile-default::after {
     content: '';
     background-color: var(--color-foreground-base);
     display: block;
@@ -83,7 +90,8 @@
     scale: 0;
     transition: all ease-out 100ms;
   }
-  .link-default:hover::after {
+  .link-default:hover::after,
+  .link-mobile-default:hover::after {
     opacity: 1;
     scale: 1;
   }
@@ -92,7 +100,11 @@
   .link-active {
     @apply font-normal cursor-default text-base-13 text-skin-base;
   }
-  .link-active::after {
+  .link-mobile-active {
+    @apply font-semibold cursor-default text-base-22 text-skin-base;
+  }
+  .link-active::after,
+  .link-mobile-active::after {
     content: '';
     background-color: var(--color-foreground-base);
     display: block;
@@ -167,8 +179,7 @@
 
   /* separators */
   .separator-vertical {
-    @apply w-[1px] h-4 my-1 mx-4 bg-slate-800;
-    color: var(--color-foreground-base);
+    @apply w-[1px] h-4 my-1 mx-4 bg-skin-primary;
   }
   .separator-vertical::after {
     content: '';
@@ -176,5 +187,15 @@
     display: block;
     width: 1px;
     height: 100%;
+  }
+  .separator-horizontal {
+    @apply w-11 h-[1px] my-5 bg-skin-gray;
+  }
+  .separator-horizontal::after {
+    content: '';
+    background-color: var(--color-gray);
+    display: block;
+    width: 100%;
+    height: 1px;
   }
 }
