--- a/app/globals.css
+++ b/app/globals.css
@@ -18,12 +18,16 @@
     --color-background-base: #f5f5f5;
     --color-foreground-base: #222221;
     --color-gray: #9e9e9e;
+    --cta-primary: #f16730;
+    --cta-secondary: #256254;
     --color-shadow: rgba(18, 41, 36, 0.15);
     /* fonts */
     --font-size-13: 13px;
     --font-size-13-line-height: 18px;
     --font-size-19: 19px;
     --font-size-19-line-height: 27px;
+    --font-size-32: 32px;
+    --font-size-32-line-height: 38px;
 
     /* --color-foreground-base: #333333;
     --color-text-inverted: #dddddd;
@@ -43,6 +47,7 @@
   .theme-contrast {
     --color-background-base: #222221;
     --color-foreground-base: #fffe54;
+    --color-gray: #fffe54;
     --color-shadow: rgba(255, 254, 84, 0.15);
   }
 
@@ -52,12 +57,16 @@
     --font-size-13-line-height: 19px;
     --font-size-19: 20px;
     --font-size-19-line-height: 28px;
+    --font-size-32: 33px;
+    --font-size-32-line-height: 40px;
   }
   .theme-font-size-biggest {
     --font-size-13: 15px;
     --font-size-13-line-height: 21px;
     --font-size-19: 21px;
     --font-size-19-line-height: 29px;
+    --font-size-32: 34px;
+    --font-size-32-line-height: 41px;
   }
 }
 
