--- a/app/globals.css
+++ b/app/globals.css
@@ -22,6 +22,8 @@
     --cta-secondary: #256254;
     --color-shadow: rgba(18, 41, 36, 0.15);
     /* fonts */
+    --font-size-10: 10px;
+    --font-size-10-line-height: 10px;
     --font-size-13: 13px;
     --font-size-13-line-height: 18px;
     --font-size-19: 19px;
@@ -47,12 +49,14 @@
   .theme-contrast {
     --color-background-base: #222221;
     --color-foreground-base: #fffe54;
-    --color-gray: #fffe54;
+    --color-gray: #9e9e9e;
     --color-shadow: rgba(255, 254, 84, 0.15);
   }
 
   /* font sizes */
   .theme-font-size-bigger {
+    --font-size-10: 10px;
+    --font-size-10-line-height: 14px;
     --font-size-13: 14px;
     --font-size-13-line-height: 19px;
     --font-size-19: 20px;
@@ -72,6 +76,9 @@
 
 @layer components {
   /*   fonts   */
+  .font-sm-normal {
+    @apply font-normal text-base-10 text-skin-base;
+  }
   .font-base-regular {
     @apply font-normal text-base-13 text-skin-base;
   }
@@ -110,6 +117,25 @@
     scale: 1;
   }
 
+  .link-default-sitemap {
+    @apply font-light text-base-13 text-skin-base focus:primary-focus;
+  }
+  .link-default-sitemap::after {
+    content: '';
+    background-color: var(--color-foreground-base);
+    display: block;
+    width: 100%;
+    height: 1px;
+    margin-top: -2px;
+    opacity: 0;
+    scale: 0;
+    transition: all ease-out 100ms;
+  }
+  .link-default-sitemap:hover::after {
+    opacity: 1;
+    scale: 1;
+  }
+
   /* link-active */
   .link-active {
     @apply font-normal cursor-default text-base-13 text-skin-base whitespace-nowrap;
@@ -125,6 +151,24 @@
     width: 100%;
     height: 1px;
     margin-top: 3px;
+  }
+
+  .link-active-sitemap {
+    @apply font-normal cursor-default text-base-13 text-skin-base whitespace-nowrap;
+  }
+  .link-active-sitemap::after {
+    content: '';
+    background-color: var(--color-foreground-base);
+    display: block;
+    width: 100%;
+    height: 1px;
+    margin-top: -2px;
+    opacity: 1;
+    scale: 1;
+    transition: all ease-out 100ms;
+  }
+  .submenu-name-sitemap {
+    @apply font-light text-base-13 text-skin-gray focus:primary-focus;
   }
 
   /* icons after line */
