--- a/app/globals.css
+++ b/app/globals.css
@@ -40,7 +40,7 @@
     --swiper-pagination-bullet-horizontal-gap: 8px;
 
     /* colors */
-    --color-background-base: #f5f5f5;
+    --color-background-base: #fdfdfd;
     --color-foreground-base: #222221;
     --color-gray: #9e9e9e;
     --cta-primary: #f16730;
@@ -72,7 +72,7 @@
   /* colors / contrasts */
   .theme-dark {
     --color-background-base: #222221;
-    --color-foreground-base: #f5f5f5;
+    --color-foreground-base: #fdfdfd;
     --color-shadow: rgba(245, 245, 245, 0.15);
   }
   .theme-contrast {
@@ -135,7 +135,7 @@
     display: block;
     width: 100%;
     height: 1px;
-    margin-top: 1px;
+    margin-top: -1px;
     opacity: 0;
     scale: 0;
     transition: all ease-out 100ms;
@@ -165,6 +165,25 @@
     scale: 1;
   }
 
+  .link-default-different-pseudo-after {
+    @apply font-light text-size-normal text-skin-base focus:primary-focus;
+  }
+  .link-default-different-pseudo-after::after {
+    content: '';
+    background-color: var(--color-foreground-base);
+    display: block;
+    width: 100%;
+    height: 1px;
+    margin-top: 1px;
+    opacity: 0;
+    scale: 0;
+    transition: all ease-out 100ms;
+  }
+  .link-default-different-pseudo-after:hover::after {
+    opacity: 1;
+    scale: 1;
+  }
+
   /* link-active */
   .link-active {
     @apply font-normal cursor-default text-size-normal text-skin-base whitespace-nowrap;
@@ -179,7 +198,7 @@
     display: block;
     width: 100%;
     height: 1px;
-    margin-top: 3px;
+    margin-top: -1px;
   }
 
   .link-active-sitemap {
@@ -200,6 +219,21 @@
     @apply font-light text-size-normal text-skin-gray focus:primary-focus;
   }
 
+  .link-active--different-pseudo-after {
+    @apply font-normal cursor-default text-size-normal text-skin-base whitespace-nowrap;
+  }
+  .link-active--different-pseudo-after::after {
+    content: '';
+    background-color: var(--color-foreground-base);
+    display: block;
+    width: 100%;
+    height: 1px;
+    margin-top: 1px;
+    opacity: 1;
+    scale: 1;
+    transition: all ease-out 100ms;
+  }
+
   /* icons*/
   .icon-active {
     @apply font-normal;
@@ -210,7 +244,7 @@
     display: block;
     width: 100%;
     height: 1px;
-    margin-top: 8px;
+    margin-top: -1px;
     opacity: 0;
     scale: 0;
     transition: all ease-out 100ms;
