feat: working activity page with animations

--- a/app/globals.css
+++ b/app/globals.css
@@ -114,6 +114,9 @@
   .font-base-bold {
     @apply font-bold text-skin-base;
   }
+  .font-large-bold {
+    @apply font-bold text-size-large;
+  }
 
   /*   focus   */
   .primary-focus {
@@ -268,6 +271,9 @@
   /* buttons */
   .standard-button {
     @apply px-6 py-2 font-light no-underline transition-all bg-skin-cta-primary rounded-base text-size-normal text-skin-inverted hover:bg-skin-cta-secondary disabled:cursor-auto disabled:bg-skin-gray;
+  }
+  .outlined-button {
+    @apply px-6 py-2 font-light no-underline lowercase transition-all bg-skin-main-bg outline outline-2 outline-cta-primary rounded-base text-size-normal text-skin-base hover:bg-skin-cta-secondary hover:outline-cta-secondary disabled:cursor-auto disabled:bg-skin-gray hover:text-skin-inverted;
   }
 
   .desktop-container {
