feat: slider shows additional info if needed and events are started

--- a/app/globals.css
+++ b/app/globals.css
@@ -372,4 +372,18 @@
     height: 376px;
     opacity: 0.3;
   }
+
+  /* .text-background::before {
+    content: '';
+    position: absolute;
+    background-color: white;
+    width: 100%;
+    height: 100%;
+  } */
+  .text-background {
+    display: inline;
+    background-color: var(--color-background-base);
+    /* color: #fff; */
+    padding: 4px;
+  }
 }
