feat: new event spotkanie autorskie

--- a/app/globals.css
+++ b/app/globals.css
@@ -406,4 +406,56 @@
     border-collapse: separate;
     border-spacing: 0 8px;
   }
+
+  /* checkbox-rect */
+  .checkbox-rect input[type='checkbox'] {
+    display: none;
+  }
+  .checkbox-rect input[type='checkbox'] + label {
+    display: block;
+    position: relative;
+    /* padding-left: 35px; */
+    /* margin-bottom: 20px; */
+    /* font: 14px/20px 'Open Sans', Arial, sans-serif; */
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+  }
+  .checkbox-rect input[type='checkbox']:hover + label:hover {
+    color: rgb(23, 86, 228);
+  }
+  .checkbox-rect input[type='checkbox']:hover + label:before {
+    background: var(--cta-secondary);
+    box-shadow: inset 0px 0px 0px 2px #f7f2f2;
+  }
+  .checkbox-rect input[type='checkbox'] + label:last-child {
+    margin-bottom: 0;
+  }
+  .checkbox-rect input[type='checkbox'] + label:before {
+    content: '';
+    display: block;
+    width: 16px;
+    height: 16px;
+    border: 2px solid var(--cta-primary);
+    border-radius: 5px;
+    position: absolute;
+    left: 0;
+    top: -8px;
+    -webkit-transition: all 0.2s, background 0.2s ease-in-out;
+    transition: all 0.2s, background 0.2s ease-in-out;
+    background: #f3f3f3;
+  }
+  .checkbox-rect input[type='checkbox']:checked + label:before {
+    @apply drop-shadow-big;
+    width: 16px;
+    height: 16px;
+    border-radius: 5px;
+    border: 2px solid var(--cta-primary);
+    -webkit-transform: rotate(90deg);
+    transform: rotate(90deg);
+    background: var(--cta-primary);
+    /* box-shadow: 0 0 0 1px #000; */
+  }
+  /* checkbox-rect end */
 }
