--- a/app/globals.css
+++ b/app/globals.css
@@ -463,74 +463,16 @@
     @apply w-96;
   }
 
-  /* custom select */
-  /* .custom-select {
+  .custom-list-bullet {
     position: relative;
+    list-style: none;
+    margin-left: 0;
+    /* padding-left: 32px; */
   }
-  .custom-select select {
-    display: none;
-  }
-  .select-selected {
-    background-color: DodgerBlue;
-  } */
-  /* arrow inside  */
-  /* .select-selected:after {
+  .custom-list-bullet li::marker {
+    content: '>>';
     position: absolute;
-    content: '';
-    top: 14px;
-    right: 10px;
-    width: 0;
-    height: 0;
-    border: 6px solid transparent;
-    border-color: #fff transparent transparent transparent;
-  } */
-  /* Point the arrow upwards when the select box is open (active): */
-  /* .select-selected.select-arrow-active:after {
-    border-color: transparent transparent #fff transparent;
-    top: 7px;
-  } */
-
-  /* style the items (options), including the selected item: */
-  /* .select-items div,
-  .select-selected {
-    color: #ffffff;
-    padding: 8px 16px;
-    border: 1px solid transparent;
-    border-color: transparent transparent rgba(0, 0, 0, 0.1) transparent;
-    cursor: pointer;
-  } */
-
-  /* Style items (options): */
-  /* .select-items {
-    position: absolute;
-    background-color: DodgerBlue;
-    top: 100%;
     left: 0;
-    right: 0;
-    z-index: 99;
-  } */
-
-  /* Hide the items when the select box is closed: */
-  /* .select-hide {
-    display: none;
+    color: var(--cta-secondary);
   }
-
-  .select-items div:hover,
-  .same-as-selected {
-    background-color: rgba(0, 0, 0, 0.1);
-  } */
-
-  /* select {
-    @apply cursor-pointer font-base-regular form-input-width form-input hover:bg-cta-secondary hover:text-skin-inverted;
-    position: absolute;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-  }
-  select::-ms-expand {
-    display: none;
-  }
-  select option {
-    @apply cursor-pointer font-base-regular form-input-width form-input hover:bg-cta-secondary hover:text-skin-inverted;
-  }  */
 }
