--- a/app/globals.css
+++ b/app/globals.css
@@ -45,6 +45,7 @@
     --color-gray: #9e9e9e;
     --cta-primary: #f16730;
     --cta-secondary: #256254;
+    --cta-secondary-opacity: rgba(37, 98, 84, 0.12);
     --color-error: #ff0000;
     --color-shadow: rgba(18, 41, 36, 0.15);
     --swiper-pagination-color: #f16730;
@@ -274,13 +275,17 @@
   }
   /* buttons */
   .standard-button {
-    @apply px-6 py-2 font-light no-underline transition-all bg-skin-cta-primary rounded-base text-size-normal text-skin-inverted hover:bg-skin-cta-secondary disabled:cursor-auto disabled:bg-skin-gray;
+    @apply px-6 py-2 font-light no-underline transition-all bg-skin-cta-primary rounded-base text-size-normal text-skin-inverted desktop:hover:bg-skin-cta-secondary disabled:cursor-auto disabled:bg-skin-gray;
   }
+  .chosen-button {
+    @apply px-6 py-2 font-light no-underline transition-all bg-skin-cta-secondary rounded-base text-size-normal text-skin-inverted desktop:hover:bg-skin-cta-primary disabled:cursor-auto disabled:bg-skin-gray;
+  }
+
   .standard-button-non-clickable {
-    @apply px-6 py-2 font-light no-underline transition-all bg-skin-cta-primary rounded-base text-size-normal text-skin-inverted disabled:cursor-auto disabled:bg-skin-gray;
+    @apply px-6 py-2 font-light no-underline transition-all bg-skin-cta-secondary rounded-base text-size-normal text-skin-inverted disabled:cursor-auto disabled:bg-skin-gray;
   }
   .outlined-button {
-    @apply px-6 py-2 font-light no-underline lowercase transition-all bg-skin-main-bg outline outline-2 outline-cta-primary rounded-base text-size-normal text-skin-base hover:bg-skin-cta-secondary hover:outline-cta-secondary disabled:cursor-auto disabled:bg-skin-gray disabled:outline-gray-color hover:text-skin-inverted;
+    @apply px-6 py-2 font-light no-underline lowercase transition-all bg-skin-main-bg outline outline-2 outline-cta-primary rounded-base text-size-normal text-skin-base desktop:hover:bg-skin-cta-primary desktop:hover:outline-cta-primary disabled:cursor-auto disabled:bg-skin-gray disabled:outline-gray-color desktop:hover:text-skin-inverted;
   }
 
   .submenu-container {
@@ -414,9 +419,6 @@
   .checkbox-rect input[type='checkbox'] + label {
     display: block;
     position: relative;
-    /* padding-left: 35px; */
-    /* margin-bottom: 20px; */
-    /* font: 14px/20px 'Open Sans', Arial, sans-serif; */
     cursor: pointer;
     -webkit-user-select: none;
     -moz-user-select: none;
@@ -451,11 +453,21 @@
     width: 16px;
     height: 16px;
     border-radius: 5px;
+    border: 2px solid var(--cta-secondary);
+    -webkit-transform: rotate(90deg);
+    transform: rotate(90deg);
+    background: var(--cta-secondary);
+  }
+
+  .checkbox-rect input[type='checkbox']:checked:hover + label:before {
+    @apply drop-shadow-big;
+    width: 16px;
+    height: 16px;
+    border-radius: 5px;
     border: 2px solid var(--cta-primary);
     -webkit-transform: rotate(90deg);
     transform: rotate(90deg);
     background: var(--cta-primary);
-    /* box-shadow: 0 0 0 1px #000; */
   }
   /* checkbox-rect end */
 
