--- a/app/globals.css
+++ b/app/globals.css
@@ -45,7 +45,8 @@
     --color-gray: #9e9e9e;
     --cta-primary: #f16730;
     --cta-secondary: #256254;
-    --cta-secondary-opacity: rgba(37, 98, 84, 0.12);
+    --cta-primary-opacity: #f1673050;
+    --cta-secondary-opacity: rgba(41, 80, 71, 0.12);
     --color-error: #ff0000;
     --color-shadow: rgba(18, 41, 36, 0.15);
     --swiper-pagination-color: #f16730;
@@ -285,7 +286,7 @@
     @apply px-6 py-2 font-light no-underline transition-all bg-skin-cta-secondary rounded-base text-size-normal text-skin-inverted disabled:cursor-auto disabled:bg-skin-gray;
   }
   .outlined-button {
-    @apply px-6 py-2 font-light no-underline lowercase transition-all bg-skin-main-bg outline outline-2 outline-cta-primary rounded-base text-size-normal text-skin-base desktop:hover:bg-skin-cta-primary desktop:hover:outline-cta-primary disabled:cursor-auto disabled:bg-skin-gray disabled:outline-gray-color desktop:hover:text-skin-inverted;
+    @apply px-6 py-2 outline-offset-[-2px] font-light no-underline lowercase transition-all bg-skin-main-bg outline outline-2 outline-cta-primary rounded-base text-size-normal text-skin-base desktop:hover:bg-skin-cta-primary desktop:hover:outline-cta-primary disabled:cursor-auto disabled:bg-skin-gray disabled:outline-gray-color desktop:hover:text-skin-inverted;
   }
 
   .submenu-container {
